updated to spring boot 3